<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".HomeFragment">

            <androidx.camera.view.PreviewView
                android:id="@+id/viewFinder"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <ImageView
                android:id="@+id/image_captured"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/margin_8dp">


                <Button
                    android:id="@+id/take_photo_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    android:layout_weight="1"
                    android:text="@string/take_photo" />

                <Button
                    android:id="@+id/diagnose_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:layout_weight="1"
                    android:text="@string/diagnose" />
            </LinearLayout>

            <TextView
                android:id="@+id/solution_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/get_solution_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/get_solution" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>